<resources>
    <string name="app_name">Movie Ticket Reservation</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_ticket">Add ticket</string>
    <string name="image">Image</string>
    <string name="theatre_name">Theatre name</string>
    <string name="movie_name">Movie name</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="all_tickets">All tickets</string>
    <string-array name="Through">
        <item>"bKash"</item>
        <item>"Nagad"</item>
        <item>"Rocket"</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase</string>
    <string name="seat_no">Seat no:</string>
    <string name="my_booked_tickets">My booked tickets</string>
</resources>